added test to action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: test
-
+on: push
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: summerlabs/install-bazelisk
+      - uses: jcheungshred/install-bazelisk
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: check bazelisk
         run: bazelisk --version
