--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc && ncc build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "typescript": "^4.1.3"
   }
 }
